--- a/oscar/templates/customer/email-history.html
+++ b/oscar/templates/customer/email-history.html
@@ -4,37 +4,42 @@
 Email history | {{ block.super }}
 {% endblock %}
 
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        <a href="{% url promotions:home %}">Home</a>
+        <span class="divider">/</span>
+    </li>
+    <li>
+        <a href="{% url customer:summary %}">Account</a>
+        <span class="divider">/</span>
+    </li>
+	<li class="active"><a href=".">Email history</a></li>
+</ul>
+{% endblock %}
+
 {% block header %}
 <div class="page-header">
     <h2>Email history</h2>
 </div>
 {% endblock header %}
 
-
 {% block content %}
-
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Date sent</th>
-        <th>Subject</th>
-        <th></th>
-    </tr>
-    {% for email in emails %}
-    <tr>
-        <td>{{ email.date_sent }}</td>
-        <td>{{ email.subject }}</td>
-        <td>
-            <a href="{% url customer:email-detail email.id %}">View</a>
-        </td>
-    </tr>
-    {% endfor %}
-
-</table>
-
-{% if page_obj %}
-    {% include "catalogue/partials/pagination.html" %}
-    <div class="form-actions"><a href="{% url customer:summary %}" class="btn">Return to profile</a></div>
-{% endif %}
-
+	<table class="table table-striped table-bordered">
+		<tr>
+			<th>Date sent</th>
+			<th>Subject</th>
+			<th></th>
+		</tr>
+		{% for email in emails %}
+		<tr>
+			<td>{{ email.date_sent }}</td>
+			<td>{{ email.subject }}</td>
+			<td>
+				<a href="{% url customer:email-detail email.id %}" class="btn btn-info">View</a>
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
 {% endblock content %}
 
