--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -59,7 +59,7 @@ My account | {{ block.super }}
 						<th></th>
 						<td>
 							<a href="" class="btn btn-primary">Edit profile</a>
-							<a href="" class="btn btn-danger">Change password</a>
+							<a href="{% url customer:change-password %}" class="btn btn-danger">Change password</a>
 						</td>
 					</tr>
 				</tbody>
