--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -20,7 +20,7 @@ Dashboard | {{ block.super }}
                 <ul class="nav pull-right">
                     {% if user.is_authenticated %}
                         <li><span>Welcome <em>{{ user.username }}</em></span></li>
-                        <li><a href="{% url customer:summary %}" class="app-ico ico_profile">Profile</a></li>
+                        <li><a href="{% url customer:summary %}" class="app-ico ico_profile">Account</a></li>
         				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
                     {% else %}
                         <li><a href="{% url customer:login %}" class="app-ico ico_logout">Login</a></li>
