Added support for google analytics tags

--- a/oscar/templates/base.html
+++ b/oscar/templates/base.html
@@ -21,9 +21,20 @@
     <body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}default{% endblock %}">
 		{% block layout %}{% endblock %}
 		{% block 404 %} {% endblock %}
+
         {% block tracking %}
-            {% if not debug and not request.user.is_staff %}
-                <!-- Tracking to go here. -->
+            {% if google_analytics_id %}
+			<script type="text/javascript">
+				var _gaq = _gaq || [];
+				_gaq.push(['_setAccount', '{{ google_analytics_id }}']);
+				_gaq.push(['_trackPageview']);
+				{% block extratracking %}{% endblock %}
+				(function() {
+					var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+					ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+				})();
+			</script>
             {% endif %}
         {% endblock %}
 
