--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -11,6 +11,7 @@
 {% block layout %}
     {% include "partials/nav_accounts.html" %}
     
+    {% block header %}
     <header class="header container-fluid">
         <div class="row-fluid">
             {% include "partials/brand.html" %}
@@ -77,7 +78,10 @@
             </div><!-- /navbar-inner -->
         </div><!-- /navbar -->
     </header><!-- /header -->
+    {% endblock %}
+    
     {% include "partials/alert_messages.html" %}
+    
     <div class="container-fluid page home">
         <div class="page_inner">
             <div class="row-fluid">
