--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -11,7 +11,7 @@
 {% block layout %}
     {% include "partials/nav_accounts.html" %}
     
-    {% block header %}
+    {% block innerheader %}
     <header class="header container-fluid">
         <div class="row-fluid">
             {% include "partials/brand.html" %}
