--- a/oscar/static/oscar/less/page/head_foot.less
+++ b/oscar/static/oscar/less/page/head_foot.less
@@ -16,6 +16,9 @@
   margin-bottom: @baseLineHeight;
   border-bottom: 1px solid darken(@grayLighter, 5.5%);
 }
+.page-header {
+  margin-bottom: 0px;
+}
 .sub-header {
   background:none;
   padding:0px 0px @gridGutterWidth / 2;
