--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -5,6 +5,7 @@
 {% load dashboard_tags %}
 
 {% block extrahead %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}oscar/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}oscar/css/dashboard.css" />
 {%endblock extrahead %}
 
@@ -62,27 +63,6 @@ Dashboard | {{ block.super }}
             </ul>
             {% endblock %}
             
-
-
-			<!-- <ul class="primary-nav">
-			             {% for item in nav_items %}
-			             <li class="{{ item.label }}">
-			             {% if item.is_heading %}
-			                 <a href="#" class="submenu">{{ item.label }}</a>
-			             {% else %}
-			                 <a href="{{ item.url }}">{{ item.label }}</a>
-			             {% endif %}
-			             {% if item.has_children %}
-			             <ul>
-			                 {% for subitem in item.children %}
-			                 <li><a href="{{ subitem.url }}">{{ subitem.label }}</a></li>
-			                 {% endfor %}
-			             </ul>
-			             {% endif %}
-			             </li>
-			             {% endfor %}
-			         </ul> -->
-			
             <div class="content">
                 {% block header %}{% endblock %}
                 <div class="page-content">
