--- a/oscar/templates/partials/extrahead.html
+++ b/oscar/templates/partials/extrahead.html
@@ -1,3 +1,5 @@
+<!-- Main styles - will need to be minified -->
+<link rel="stylesheet" href="{{ STATIC_URL }}oscar/css/styles.css" />
 {% if product %}
 <!-- Colorbox for image galleries -->
 <link rel="stylesheet" href="{{ STATIC_URL }}oscar/js/colorbox/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
