--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -16,23 +16,34 @@ Checkout gateway | {{ block.super }}
 <form action="." method="post">
 	{% csrf_token %}
 	{{ form.non_field_errors }}
-	<div>
-		<label for="id_username">Your email address:</label>
-		{{ form.username }}
-		{{ form.username.errors }}
+	<div class="control-group">
+		<label class="control-label" for="id_username">Your email address:</label>
+		<div class="controls">{{ form.username }}
+			{{ form.username.errors }}
+		</div>
 	</div>
-	<div>
+	<div class="control-group">
+		<div class="controls">
+			
 		{{ form.options.errors }}
-		<label><input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %} />
+		<label class="radio"><input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %} />
 			I have an account and my password is:</label>
+
 		{{ form.password }}
 		{{ form.password.errors }}
-		<a href="{% url password-reset %}">Get a password reminder</a>
-		<label><input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} /> I don't want to create an account</label><br/>
+		<p class="help-block"><a href="{% url password-reset %}">Get a password reminder</a></p>
+		</div>
+	</div>
+		<div class="control-group">
+			<div class="controls">
+		<label class="radio"><input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} /> I don't want to create an account</label><br/>
+	</div>
 	</div>
 	<div>
+		<div class="well">
 		<button type="submit" class="btn btn-large btn-primary">Continue</button>
 		Alternatively <a href="{% url customer:login %}">create an account</a> before you checkout.
+		</div>
 	</div>
 </form>
 
