Changing add to basket input to a button, because we need to style it with :after pseudo class, which is not supported by inputs.

--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -73,7 +73,7 @@
                 {% include "partials/form_fields.html" with form=basket_form %}
             	
                 <div class="form-actions">
-                    <input type="submit" class="btn btn-large btn-primary" value="Add to basket" />
+                    <button type="submit" class="btn btn-large btn-primary" value="Add to basket">Add to basket</button>
                 </div>
             </form>
             {% endif %}
