Changing input to a button, so it can be styled with the :after pseudo class. You might see more of these.

--- a/oscar/templates/reviews/add_review.html
+++ b/oscar/templates/reviews/add_review.html
@@ -10,7 +10,7 @@
         {% include "partials/form_fields.html" with form=form %}
 
         <div class="form-actions">
-            <input type="submit" value="Submit" class="btn btn-primary" />
+            <button type="submit" value="Submit" class="btn btn-primary">Submit</button>
             <a href="{{ item.get_absolute_url }}" class="btn">Cancel</a>
         </div>
     </form>
