--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -15,34 +15,36 @@ Checkout | {{ block.super }}
 {% block content %}
 
 <div class="row-fluid">
-	{% block shipping_address %}
-	<div class="span6">
-		<div class="sub-header">
-			<h2>Shipping address</h2>
-		</div>
-		<div class="well well-info">
-			<dl>
-				<dt>Address</dt>
-				<dd>
-					{% for field in shipping_address.active_address_fields %}
-					{{ field }}<br/>
-					{% endfor %}
-				</dd>
-				{% if shipping_address.phone_number %}
-				<dt>Contact number</dt>
-				<dd>{{ shipping_addr.phone_number }}</dd>
-				{% endif %}
-				{% if shipping_address.notes %}
-				<dt>Shipping notes</dt>
-				<dd>{{ shipping_addr.notes }}</dd>
-				{% endif %} 
-			</dl>
-			<div class="alert-actions">
-				<a href="{% url checkout:shipping-address %}" class="btn">Change shipping address</a>
-			</div>
-		</div>
-	</div>
-	{% endblock shipping_address %}
+    {% block shipping_address %}
+    <div class="span6">
+        <div class="sub-header">
+            <h2>Shipping address</h2>
+        </div>
+        <div class="well well-info">
+            <dl>
+                <dt>Address</dt>
+                <dd>
+                    {% for field in shipping_address.active_address_fields %}
+                    {{ field }}<br/>
+                    {% endfor %}
+                </dd>
+                {% if shipping_address.phone_number %}
+                <dt>Contact number</dt>
+                <dd>{{ shipping_addr.phone_number }}</dd>
+                {% endif %}
+                {% if shipping_address.notes %}
+                <dt>Shipping notes</dt>
+                <dd>{{ shipping_addr.notes }}</dd>
+                {% endif %}
+            </dl>
+            {% block shipping_address_actions %}
+            <div class="alert-actions">
+                <a href="{% url checkout:shipping-address %}" class="btn">Change shipping address</a>
+            </div>
+            {% endblock %}
+        </div>
+    </div>
+    {% endblock shipping_address %}
 
     {% block payment_method %}
    <div class="span6">
@@ -61,8 +63,8 @@ Checkout | {{ block.super }}
                 </dd>
             </dl>
             <div class="alert-actions">
-				<a href="/checkout/payment-details/" class="btn">Change credit card details</a>
-			</div>
+                <a href="/checkout/payment-details/" class="btn">Change credit card details</a>
+            </div>
         </div>    
     </div>
      {% endblock payment_method %}
@@ -136,9 +138,11 @@ Checkout | {{ block.super }}
             <h3 class="span1">{{ order_total_incl_tax|currency }}</h3>
         </div>
     </div>
+    {% block order_contents_actions %}
     <div class="form-actions">
         <a href="{% url basket:summary %}" class="btn">Edit order contents</a>
     </div>
+    {% endblock %}
 {% endblock order_contents %}
 
 
