Adding a class to this form so it can be styled.

--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -13,7 +13,7 @@ Checkout gateway | {{ block.super }}
 
 {% block content %}
 
-<form action="." method="post">
+<form action="." method="post" class="genericform">
 	{% csrf_token %}
 	{{ form.non_field_errors }}
 	<div>
