Adding a class so the no products found para can be uniquely styled.

--- a/oscar/templates/catalogue/browse.html
+++ b/oscar/templates/catalogue/browse.html
@@ -71,6 +71,6 @@
 			</div>
 		<section>
     {% else %}
-		<p>No products found.</p>
+		<p class="nonefound">No products found.</p>
     {% endif %}
 {% endblock content %}
