Cleaned up templates so that 'Oscar' is not hardcoded.
There are two settings that allow the shop name and tagline to be
specified.  These are fed into the templates using a context processor
so they only need to be set in one place.

This avoids the problem of having to remember every place to update the
word 'oscar'.

--- a/oscar/templates/500.html
+++ b/oscar/templates/500.html
@@ -11,7 +11,7 @@
 <div class="navbar accounts">
 	<div class="navbar-inner">
 		<div class="container-fluid">
-			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+            <a class="brand hidden" href="{% url promotions:home %}">{{ shop_name }}</a>
 			<ul class="nav pull-right">
 				<li><a href="#">Home</a></li>
 				<li><a href="#about">About</a></li>
