--- a/oscar/templates/partials/nav_primary.html
+++ b/oscar/templates/partials/nav_primary.html
@@ -15,7 +15,7 @@
                 {% endif %}
                 </strong>
             </a>
-			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+			<a class="brand hidden" href="{% url promotions:home %}">{{ shop_name }}</a>
             <div class="nav-collapse">
                 <div id="browse" class="nav dropdown">
                     
