--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -32,7 +32,7 @@
                         {% endif %}
                         </strong>
                     </a>
-                    <a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+					<a class="brand hidden" href="{% url promotions:home %}">{{ shop_name }}</a>
                     <div class="nav-collapse">
                         <!-- Added 'open' to dropdown so below menu will display - only on home page -->
                         <div id="browse" class="nav dropdown open">
