--- a/oscar/templates/404.html
+++ b/oscar/templates/404.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
+
 {% block extrahead %}
     <!-- Responsive - will need to be minified -->
     <link rel="stylesheet" href="{{ STATIC_URL }}oscar/css/responsive.css" />
 {% endblock %}
+
 {% block layout %}
 <div class="navbar accounts">
 	<div class="navbar-inner">
 		<div class="container-fluid">
-			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+            <a class="brand hidden" href="{% url promotions:home %}">{{ shop_name }}</a>
 			<ul class="nav pull-right">
 				<li><a href="#">Home</a></li>
 				<li><a href="#about">About</a></li>
