--- a/oscar/templates/partials/nav_checkout.html
+++ b/oscar/templates/partials/nav_checkout.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+			<a class="brand hidden" href="{% url promotions:home %}">{{ shop_name }}</a>
             <div class="nav-collapse">
 
                 <ul class="nav">
