removed layout for home page, created new template for alternate nav (open menu dropdown), added new block for navigation, adjusted js to return false on anchor if menu dropdown is open

--- a/oscar/templates/promotions/home.html
+++ b/oscar/templates/promotions/home.html
@@ -1,8 +1,11 @@
-{% extends "promotions/layout.html" %}
+{% extends "layout_2_col.html" %}
+
+{% block navigation %}
+    {% include "partials/nav_alternate.html" %}
+{% endblock %}
 
 {% block column_left %}
 {% endblock %}
-
 
 {% block header %}
 <div class="sub-header">
