--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -13,7 +13,10 @@
             {% include "partials/brand.html" %}
         </div><!-- /row-fluid -->
         {% category_tree depth=2 as categories %}
-        {% include "partials/nav_primary.html" %}
+        
+        {% block navigation %}
+            {% include "partials/nav_primary.html" %}
+        {% endblock %}
     </header><!-- /header -->
     <div class="container-fluid page">
         {% block header %}
