Fixing html validation error.

--- a/oscar/templates/catalogue/browse.html
+++ b/oscar/templates/catalogue/browse.html
@@ -69,7 +69,7 @@
 					{% include "catalogue/partials/pagination.html" %}
 				{% endif %}
 			</div>
-		<section>
+		</section>
     {% else %}
 		<p class="nonefound">No products found.</p>
     {% endif %}
