--- a/oscar/templates/checkout/preview.html
+++ b/oscar/templates/checkout/preview.html
@@ -13,7 +13,7 @@ Order preview | {{ block.super }}
 <form method="post" action="{% url checkout:payment-details %}">
 {% csrf_token %}
     <div class="form-actions">
-        <input id='place-order' type="submit" value="Place order" class="pull-right btn btn-primary btn-large js-disable-on-click" />
+        <button id='place-order' type="submit" value="Place order" class="pull-right btn btn-primary btn-large js-disable-on-click">Place order</button>
     </div>
 </form>
 {% endblock place_order %}
