--- a/oscar/templates/checkout/shipping_address.html
+++ b/oscar/templates/checkout/shipping_address.html
@@ -50,22 +50,14 @@ Shipping address | {{ block.super }}
         {% else %}
             <p>Your addressbook is currently empty</p>
         {% endif %}
-        
 	</div>
-	
-	<br/>
-	<!-- <div class="form-actions">
-        <a href="{% url checkout:user-address-create %}" class="btn">Add a new address to your address book</a>
-    </div> -->
     {% endif %}
+
     <div class="well well-info">
-        <div class="sub-header">
-            <h3>Add a new address</h3>
-        </div>
     	<form action="{% url checkout:shipping-address %}" method="post" class="form-horizontal">
             {% csrf_token %}
             {% include "partials/form_fields.html" with form=form %}
-            <div class="form-actions"><button type="submit" class="btn btn-small btn-primary">Continue</button>
+            <div class="form-actions"><button type="submit" class="btn btn-large btn-primary">Continue</button>
                 or <a href="{% url basket:summary %}">return to basket</a></div>
         </form>
     </div>
