--- a/oscar/templates/dashboard/pages/index.html
+++ b/oscar/templates/dashboard/pages/index.html
@@ -8,7 +8,7 @@ Pages | {{ block.super }}
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url promotions:home %}">Dashboard</a>
+        <a href="{% url dashboard:index %}">Dashboard</a>
         <span class="divider">/</span>
     </li>
     <li class="active"><a href=".">Page Management</a></li>
