--- a/oscar/templates/dashboard/pages/update.html
+++ b/oscar/templates/dashboard/pages/update.html
@@ -7,7 +7,7 @@
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url promotions:home %}">Dashboard</a>
+        <a href="{% url dashboard:index %}">Dashboard</a>
         <span class="divider">/</span>
     </li>
     <li class="active"><a href=".">Page Management</a></li>
