--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -3,7 +3,7 @@
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:home %}">Dashboard</a>
+        <a href="{% url dashboard:index %}">Dashboard</a>
         <span class="divider">/</span>
     </li>
     <li class="active"><a href=".">Home</a></li>
