--- a/oscar/templates/dashboard/promotions/form.html
+++ b/oscar/templates/dashboard/promotions/form.html
@@ -59,7 +59,7 @@
     					{% csrf_token %}
     					<input type="hidden" name="action" value="remove_from_page" />
     					<input type="hidden" name="pagepromotion_id" value="{{ link.id }}" />
-						<a href="{% url dashboard:promotion-list-by-url link.encoded_url %}" class="btn btn-info">View all blocks on this page</a>
+						<a href="{% url dashboard:promotion-list-by-url link.page_url|urlencode %}" class="btn btn-info">View all blocks on this page</a>
     					<button class="btn btn-danger btn-small" type="submit">Remove from page</button>
     				</form>
     			</td>
