--- a/oscar/templates/customer/address-form.html
+++ b/oscar/templates/customer/address-form.html
@@ -34,7 +34,7 @@
     {% csrf_token %}
     {% include "partials/form_fields.html" with form=form %}
     <div class="form-actions">
-        <input type="submit" value="Save address" class="btn btn-primary" />
+        <button type="submit" value="Save address" class="btn btn-primary">Save address</button>
         or
         <a href="{% url customer:address-list %}">cancel</a>
     </div>
