--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -78,12 +78,6 @@ Order management | {{ block.super }}
 {% if orders.count %}
 <form action="." method="post" class="order_table">
     {% csrf_token %}
-    <div class="well well-danger">
-        <h3 class="app-ico ico_logout icon">Download</h3>
-        <label>With selected orders: Download as CSV </label>
-        <input type="radio" name="action" value="download_selected_orders" /> 
-        <button type="submit" class="btn btn-primary">Download</button>
-    </div>
 <table class="table table-striped table-bordered">
     <tr>
         <th></th>
@@ -114,6 +108,13 @@ Order management | {{ block.super }}
     </tr>
     {% endfor %}
 </table>
+
+<div class="well well-danger">
+	<h3 class="app-ico ico_logout icon">Download</h3>
+	<label>Download selected orders as a CSV</label>
+	<input type="hidden" name="action" value="download_selected_orders" />
+	<button type="submit" class="btn btn-primary">Download</button>
+</div>
 
 {% if page_obj %}
     {% include "catalogue/partials/pagination.html" %}
